# Keboli

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/rest/: app.py
backend/src/config/: settings.py
backend/src/constants/: enums.py
backend/src/core/services/: interview_service.py  invitation_service.py
backend/src/core/utils/: file_processing.py
backend/src/data/migrations/: env.py
backend/src/data/models/: __init__.py  assessment.py  evaluation.py  invitation.py  recruiter.py  transcript.py
backend/src/data/repositories/: interview_transcript_repo.py  invitation_repo.py
backend/src/handlers/audio/: deepgram_stt.py
backend/src/schemas/: assessment_schema.py  auth_schema.py  evaluation_schema.py  invitation_schema.py
evaluation_agent/app/: graph.py  keboli_client.py  main.py  prompt_manager.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: store.ts
frontend/src/components/carousel/: Carousel.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  KPICard.tsx  Modal.tsx  Pagination.tsx
frontend/src/features/candidate/: CandidateManagementPage.tsx
interview_agent/: Dockerfile  pyproject.toml
interview_agent/app/: .env  agent_worker.py  config.py  fastapi_server.py  keboli_client.py  llm.py  llm_adapter.py  prompt_manager.py  state.py
interview_agent/app/node/: interview_node.py  skill_extraction_node.py
(+15 files in other folders)
